--- a/api-evolution/new-client/src/main/resources/templates/index.html
+++ b/api-evolution/new-client/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
     <title>Spring HATEOAS Examples - Original Client</title>
